webSite/website.css
/***********************************************************************
* retro-205/emulator website.css
************************************************************************
* Copyright (c) 2015, Paul Kimpel.
* Licensed under the MIT License, see 
*       http://www.opensource.org/licenses/mit-license.php
************************************************************************
* Datatron 205 emulator test site global style sheet.
************************************************************************
* 2015-08-29  P.Kimpel
*   Original version, from retro-B5500 webSite/website.css.
***********************************************************************/

@font-face {
    font-family: "DejaVuSansMonoBookWeb";
    src: url("../webUI/resources/DejaVuSansMono-webfont.ttf") format("truetype"),
         url("../webUI/resources/DejaVuSansMono-webfont.woff") format("woff");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "DejaVuSansWeb";
    src: url("../webUI/resources/DejaVuSans-webfont.ttf") format("truetype"),
         url("../webUI/resources/DejaVuSans-webfont.woff") format("woff");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "DejaVuSansWeb";
    src: url("../webUI/resources/DejaVuSans-Bold-webfont.ttf") format("truetype"),
         url("../webUI/resources/DejaVuSans-Bold-webfont.woff") format("woff");
    font-weight: bold;
    font-style: normal;
}

BODY {
    position:           relative;
    max-width:          80ex;
    font-family:        DejaVuSansWeb, sans-serif;
    font-size:          small;
    margin:             1ex}

H1 {
    margin-top:         4ex;
    margin-bottom:      1ex;
    vertical-align:     middle;
    font-size:          larger;
    font-weight:        bold}

H2 {
    margin-top:         2ex;
    margin-bottom:      1ex;
    font-size:          medium;
    font-weight:        bold}

HR {
    color:              #333399;
    height:             1px}

PRE {
    font-size:          small;
    font-family:        DejaVuSansMonoBookWeb, monospace}

P {
    margin-top:         1ex;
    margin-bottom:      1ex}

DIV.indented {
    margin-left:        2em}

BLOCKQUOTE.finePrint {
    font-size:          smaller}

UL {
    margin-top:         1ex;
    margin-bottom:      1ex}

UL LI {
    margin-top:         0.5ex;
    margin-bottom:      0.5ex}

DL {
    margin-left:        2em}

TABLE.normal, TABLE.standard {
    border-spacing:     0;
    border-collapse:    collapse}

TABLE.border{
    border-color:       #CCC;
    border-width:       1px;
    border-style:       solid}

CAPTION {
    text-align:         center;
    padding-left:       4px;
    padding-right:      4px;
    font-weight:        bold}

TH {
    vertical-align:     bottom;
    text-align:         center;
    padding-left:       2px;
    padding-right:      2px;
    font-family:        DejaVuSansWeb, sans-serif;
    font-weight:        bold}

TABLE.normal>TBODY>TR, TABLE.standard>TBODY>TR {
    vertical-align:     top}

TABLE.normal>TBODY>TR>TD, TABLE.standard>TBODY>TR>TD {
    padding-top:        1px;
    padding-bottom:     1px;
    padding-left:       2px;
    padding-right:      2px}

TABLE.standard>THEAD>TR>TH, TABLE.standard>TBODY>TR>TD {
    font-size:          85%}

TABLE.standard>THEAD>TR>TH, TABLE.normal>THEAD>TR>TH {
    text-align:         center;
    padding-left:       0.5ex;
    padding-right:      0.5ex;
    font-weight:        bold}

TABLE.border>THEAD>TR>TH, TABLE.border>TBODY>TR>TD {
    border:             1px solid #CCCCCC}

TD.text {
    font-family:        DejaVuSansMonoBookWeb, monospace;
    text-align:         left}

TD.number {
    white-space:        nowrap;
    text-align:         right}

BUTTON.actionBtn {
    font-family:        DejaVuSansWeb, sans-serif;
    font-size:          9pt;
    font-weight:        bold;
    color:              black;
    background-color:   #D0D0D0}

INPUT.actionBtn {
    font-family:        DejaVuSansWeb, sans-serif;
    font-size:          9pt;
    font-weight:        bold;
    color:              black;
    background-color:   #D0D0D0}

.center {
    text-align:         center}
.data {
    font-family:        DejaVuSansMonoBookWeb, monospace;
    text-align:         left;
    white-space:        nowrap}
.number {
    font-family:        DejaVuSansMonoBookWeb, monospace;
    text-align:         right}
.lj {
    text-align:         left}
.rj {
    text-align:         right}
.larger {
    font-size:          larger}
.large {
    font-size:          125%}
.smaller {
    font-size:          smaller}
.small {
    font-size:          60%}

IMG#retroButton {
    float:              right;
    border:             none;
    margin-left:        1ex}

DIV#footerDiv {
    position:           absolute;
    left:               1ex;
    bottom:             0;
    background-color:   white;
    font-size:          xx-small}

DIV#lastModDiv {
    position:           absolute;
    right:              1ex;
    bottom:             0;
    background-color:   white;
    font-size:          xx-small}

